--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+        const firebaseConfig = {
+      apiKey: "AIzaSyBcxIUIzChynCBZ12OvCV6HFdfQko3hNfQ",
+      authDomain: "fvop-bae53.firebaseapp.com",
+      projectId: "fvop-bae53",
+      storageBucket: "fvop-bae53.appspot.com",
+      messagingSenderId: "897757369509",
+      appId: "1:897757369509:web:6b5e9dd7e7f265ea65e94c"
     };
 
     // Initialize Firebase
